--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
       hibernate:
 #        show_sql: true
         format_sql: true
+        use_sql_comments: true
 #        default_batch_fetch_size: 1000 #최적화 옵션
 
 logging.level:
